@@ -70,16 +70,20 @@ import technology.rocketjump.undermount.messaging.types.*;
 import technology.rocketjump.undermount.particles.ParticleEffectTypeDictionary;
 import technology.rocketjump.undermount.particles.model.ParticleEffectType;
 import technology.rocketjump.undermount.rooms.Bridge;
+import technology.rocketjump.undermount.rooms.Room;
+import technology.rocketjump.undermount.rooms.components.StockpileComponent;
 import technology.rocketjump.undermount.rooms.constructions.Construction;
 import technology.rocketjump.undermount.ui.GameInteractionMode;
 import technology.rocketjump.undermount.ui.GameInteractionStateContainer;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static technology.rocketjump.undermount.entities.behaviour.furniture.InnoculationLogBehaviour.InnoculationLogState.INNOCULATING;
 import static technology.rocketjump.undermount.entities.components.ItemAllocation.Purpose.HELD_IN_INVENTORY;
 import static technology.rocketjump.undermount.entities.model.EntityType.*;
 import static technology.rocketjump.undermount.materials.model.GameMaterial.NULL_MATERIAL;
+import static technology.rocketjump.undermount.rooms.HaulingAllocation.AllocationPositionType.ROOM;
 
 /**
  * This class deals with dishing out jobs to entities requesting them
@@ -152,6 +156,7 @@ public class JobMessageHandler implements GameContextAware, Telegraph {
 		messageDispatcher.addListener(this, MessageType.REQUEST_BRIDGE_REMOVAL);
 		messageDispatcher.addListener(this, MessageType.REMOVE_HAULING_JOBS_TO_POSITION);
 		messageDispatcher.addListener(this, MessageType.JOB_STATE_CHANGE);
+		messageDispatcher.addListener(this, MessageType.STOCKPILE_SETTING_UPDATED);
 	}
 
 	@Override
@@ -235,6 +240,11 @@ public class JobMessageHandler implements GameContextAware, Telegraph {
 						}
 					}
 				}
+				return true;
+			}
+			case MessageType.STOCKPILE_SETTING_UPDATED: {
+				Room targetRoom = (Room) msg.extraInfo;
+				stockpileSettingUpdated(targetRoom);
 				return true;
 			}
 			default:
@@ -1237,5 +1247,30 @@ public class JobMessageHandler implements GameContextAware, Telegraph {
 			}
 		}
 		return null;
+	}
+
+	private void stockpileSettingUpdated(Room targetRoom) {
+		StockpileComponent stockpileComponent = targetRoom.getComponent(StockpileComponent.class);
+
+		List<Job> invalidJobs = jobStore.getByType(haulingJobType)
+				.stream()
+				// filter to all hauling jobs for this stockpile
+				.filter(j ->
+						j.getHaulingAllocation().getTargetPositionType().equals(ROOM) &&
+								j.getHaulingAllocation().getTargetId().equals(targetRoom.getRoomId())
+				)
+				// filter to those items which are no longer held here
+				.filter(j -> {
+					Entity itemEntity = gameContext.getEntities().get(j.getTargetId());
+					if (itemEntity != null) {
+						ItemEntityAttributes attributes = (ItemEntityAttributes) itemEntity.getPhysicalEntityComponent().getAttributes();
+						return !stockpileComponent.canHold(attributes);
+					} else {
+						return false;
+					}
+				})
+				.collect(Collectors.toList());
+
+		invalidJobs.forEach(j -> messageDispatcher.dispatchMessage(MessageType.JOB_REMOVED, j));
 	}
 }
