@@ -131,6 +131,7 @@ public class MessageType {
 	public static final int REMOVE_PIPE = 620;
 	public static final int PIPE_ADDED = 621;
 	public static final int FISH_HARVESTED_FROM_RIVER = 622;
+	public static final int STOCKPILE_SETTING_UPDATED = 623;
 
 	// Item-specific messages
 	public static final int HAULING_ALLOCATION_CANCELLED = 700;
